alignment and fixes

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -159,3 +159,24 @@
 #tfr-tryon-image {
     max-width: 30vw;
 }
+
+.progress-bar {
+    height: 10px;
+    width: 55%;
+    background-color: white;
+    border: 1px solid rgb(189, 189, 189);
+    margin: 0 auto;
+    margin-top: 15px;
+}
+
+.progress-bar-fill {
+    display: block;
+    height: 100%;
+    background-color: #209da7;
+    animation-name: progress;
+    animation-duration: 120s;
+    text-align: center;
+    font-size: 16px;
+    color: white;
+    transition: width 600ms linear;
+}
